# cblit

./: .pre-commit-config.yaml  README.md  pyproject.toml
cblit/: main.py  pregenerate.py  spike.py  wrap_translator.py
cblit/cli/: session_wrapper.py
cblit/errors/: errors.py
cblit/game/: game.py  game_cli_wrapper.py  pregenerated_game.py
cblit/gpt/: completion.py  country.py  documents.py  gpt_api.py  gpt_queries.py  officer.py  phrasebook.py
cblit/llm/: llm.py
cblit/pregenerated_games/: pregen_1688714620.json  pregen_1688714712.json  pregen_1688714767.json  pregen_1688714815.json  pregen_1688714885.json  pregen_1688714938.json  pregen_1688715002.json  pregen_1688715068.json  pregen_1688715243.json  pregen_1688715295.json  pregen_1688715358.json  pregen_1688715419.json  pregen_1688715476.json  pregen_1688715604.json  pregen_1688715728.json  pregen_1688715782.json  pregen_1688715845.json  pregen_1688715907.json  pregen_1688715964.json  pregen_1688716106.json  pregen_1688716167.json  pregen_1688716227.json  pregen_1688716280.json  pregen_1688716395.json  pregen_1688716464.json  pregen_1688716602.json  pregen_1688716679.json  pregen_1688716740.json  pregen_1688716791.json  pregen_1688716889.json  pregen_1688716941.json  pregen_1688716990.json  pregen_1688717043.json  pregen_1688717092.json  pregen_1688717147.json  pregen_1688717201.json  pregen_1688717254.json  pregen_1688717307.json  pregen_1688717361.json  pregen_1688717413.json  (+26 more)
cblit/session/: __init__.py  country.py  game.py  officer.py  session.py  singleton_session.py  translator.py
cblit/session/immigrant/: __init__.py  document.py  immigrant.py  quenta.py
cblit/session/language/: phrasebook.py  translator.py
cblit/socketio/: game.py  messages.py  server.py
cblit/socketio/static/: index.html  main.css  main.js  schema.css  spinner.css  ui.js
gpt-logs/: ConstructedCountrySession-2023-03-29T13:40:49.811907.json  ConstructedCountrySession-2023-03-29T14:19:00.405997.json  Game-2023-04-10T20:15:21.816572.json  Game-2023-04-14T14:50:06.051908.json  Game-2023-04-14T14:56:49.406922.json  OfficerSession-2023-03-31T19:27:44.517319.json  log-1.md  log-2.md
tests/: test_country.py
tests/session/: __init__.py
tests/session/language/: test_phrasebook.py
